# scientific-computing-cpp

./: .gitignore  LICENSE  README.md  reade.md
Exercises/exercise_01/: CMakeLists.txt  media.cpp
Exercises/exercise_02/: CMakeLists.txt  ese1_parte1.cpp  ese1_parte2.cpp  ese2.cpp  ese3.cpp  prova.cpp
Exercises/exercise_03/: CMakeLists.txt  header.hpp  main.cpp  prova.cpp
Exercises/exercise_04/: grafici_matlab.m  measure_sorts.cpp  sort.hpp  test_bubblesort.cpp
Exercises/exercise_05/: CMakeLists.txt  Considerazioni finali.docx  README.md  grafico_completo_debug.m  grafico_completo_release.m  measure_sorts.cpp  sort.hpp  test_hybridquicksort.cpp  test_insertionsort.cpp  test_mergesort.cpp  test_quicksort.cpp  test_selectionsort.cpp
Exercises/exercise_08/: CMakeLists.txt  main.cpp  unidirected_graph.hpp
Exercises/exercise_09/: CMakeLists.txt  containers.hpp  graph.hpp  main.cpp
Exercises/exercise_10/: CMakeLists.txt  gradiente_cd.hpp
Exercises/exercise_11/: dot_prod.hpp  test_cicliDFS.cpp  unidirected_graph.hpp
Progetto/: README.md  READMe.md  main.cpp
Progetto/include/: print_graphs.hpp  solve.hpp
Progetto/test/: test_cycles_DFS.cpp  test_graph.cpp
Project/: CMakeLists.txt  CSV_test.csv  README.md  main.cpp
Project/include/: conjugate_gradient.hpp  cycles_DFS.hpp  de_pina.hpp  fifo.hpp  graph_construction.hpp  lifo.hpp  netlist_struct.hpp  print_graphs.hpp  recursive_DFS.hpp  solve.hpp
esercitazione10/: main.cpp
esercitazione11/: binary_diff.hpp  cicli.hpp  graph.hpp  unidirected_edge.hpp
esercitazione3/: header.hpp  main.cpp
(+48 files in other folders)
